--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "reveal.js": "^5.1.0"
   },
@@ -32,6 +30,7 @@
     "@types/node": "^20.11.27",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/reveal.js": "^5.0.3",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.18",
@@ -48,7 +47,6 @@
     "husky": "^9.0.11",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
-    "redux-logger": "^3.0.6",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.6"
   }
