--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.5.2/schema.json",
-  "organizeImports": {
-    "enabled": true
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
+  "files": {
+    "experimentalScannerIgnores": ["dist", "sw.js"]
   },
   "linter": {
     "enabled": true,
@@ -15,11 +15,14 @@
         "noDebugger": "off"
       },
       "correctness": {
-        "useExhaustiveDependencies": "off"
+        "useExhaustiveDependencies": "off",
+        "noUnusedImports": "off",
+        "noUnusedVariables": "off"
       },
       "complexity": {
         "noForEach": "off",
-        "noUselessThisAlias": "off"
+        "noUselessThisAlias": "off",
+        "noUselessConstructor": "off"
       },
       "performance": {
         "noDelete": "off"
@@ -31,22 +34,29 @@
         "noAutofocus": "off",
         "useKeyWithClickEvents": "off",
         "useKeyWithMouseEvents": "off",
-        "useValidAnchor": "off"
+        "useValidAnchor": "off",
+        "noSvgWithoutTitle": "off",
+        "useSemanticElements": "off"
       },
       "style": {
-        "noCommaOperator": "off",
         "useSingleVarDeclarator": "off",
         "noParameterAssign": "off",
-        "noVar": "off",
-        "useTemplate": "off"
+        "noNonNullAssertion": "off",
+        "useSelfClosingElements": "off",
+        "useNodejsImportProtocol": "off",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       }
     }
   },
   "formatter": {
     "enabled": true,
     "formatWithErrors": true,
-    "include": ["src"],
-    "ignore": ["public", "assets", "__unit_tests_results__", "**/*.html", "**/*.mdx"],
     "indentWidth": 2,
     "indentStyle": "space",
     "lineEnding": "lf",
@@ -63,12 +73,21 @@
       "jsxQuoteStyle": "single",
       "quoteProperties": "asNeeded",
       "quoteStyle": "single",
-      "semicolons": "always",
-      "trailingComma": "all"
+      "semicolons": "always"
     }
   },
   "json": {
     "parser": { "allowComments": true, "allowTrailingCommas": true },
     "formatter": { "enabled": false }
+  },
+  "css": {
+    "formatter": {
+      "enabled": false,
+      "quoteStyle": "single",
+      "indentStyle": "space",
+      "indentWidth": 2,
+      "lineEnding": "lf",
+      "lineWidth": 120
+    }
   }
 }
